tests/samples/invalid/missing_label.pn
fn main() -> i32
{
	var x = 33;

	goto foo;

	x = 100;

	return:
	x
}
